2003-08-07  Sam Steingold  <sds@gnu.org>

	properly update pointers to dynamic objects
	* foreign.d (object_handle): extracted from object address()
	(foreign_libraries): keep the objects imported from the library
	(update_library, push_foreign_object): new functions
	(FOREIGN-LIBRARY, validate_fpointer): call update_library()
	(FOREIGN-LIBRARY-VARIABLE, FOREIGN-LIBRARY-FUNCTION):
	call push_foreign_object()

2003-08-07  Sam Steingold  <sds@gnu.org>

	regexp module does not use FFI - 25% speedup
	* modules/regexp/preload.lisp: new file
	* modules/regexp/link.sh.in: preload it, don't look for regexp.c
	* modules/regexp/regexp.lisp: removed FFI forms
	* modules/regexp/regexi.c (REGEXP-COMPILE, REGEXP-EXEC)
	(REGEXP-FREE): implemented here
	* foreign.d (check_fpointer): replaces fehler_fpointer_invalid()
	* genclisph.d (posfixnum, negfixnum, sfixnum, fp_validp)
	(check_fpointer): export

2003-08-06  Sam Steingold  <sds@gnu.org>

	added a bindings/win32 module with a couple of rudimentary functions

2003-08-06  Sam Steingold  <sds@gnu.org>

	* configure: link all modules/* files, not just directories
	* modules/exporting.lisp: new files, abstracted from linux.lisp
	* makemake.in: compile exporting.lisp
	* modules/bindings/glibc/linux.lisp, modules/netica/netica.lisp:
	* modules/postgresql/postgresql.lisp: load exporting.lisp

2003-08-06  Sam Steingold  <sds@gnu.org>

	removed obsolete module linuxlibc5 and renamed linuxlibc6 to glibc

2003-08-06  Sam Steingold  <sds@gnu.org>

	Unified modules postgresql632 and postgresql642 into postgresql
	* Makefile.devel: use implicit rules for configure and config.h.in
	(CONFIGURES, CONFIG_H_IN): added postgresql

2003-08-06  Sam Steingold  <sds@gnu.org>

	the demo now works just fine
	* modules/netica/demo.lisp: use DEFPARAMETER
	* modules/netica/wrap.lisp (null-pointer): removed (use NIL instead)
	(check-errors): use CERROR
	(make-net): set comment and title
	(net-info, node-info): new functions